[tool.poetry]
name = "cloudwalker-api"
version = "0.0.1"
description = "API server for controlling IoT shoes"
authors = ["Neal Gompa <ngompa13@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0",allow-prereleases = true}

[tool.black]
line-length = 100
py36 = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

